add functionality to the submit button and connect js to html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form>
         <div class="form-group">
           <label for="user-input">Enter any text</label>
-          <input type="number" class="form-control" id="user-input">
+          <input type="text" class="form-control" id="user-input">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
